# github-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py  server.json
github_mcp/: __main__.py  client.py  config.py  ratelimit.py  server.py
github_mcp/groups/: read.py  write.py
scripts/: list_tools.py
tests/: conftest.py  test_client.py  test_config.py  test_live_smoke.py  test_ratelimit.py  test_read.py  test_server.py  test_write.py
