[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-mcp"
version = "0.1.0"
description = "Public read+write reference MCP server over the GitHub REST API. Env-gated tool groups (read always on, write off by default), fine-grained PAT auth that degrades to the unauthenticated tier, typed rate-limit/error payloads. Reference portfolio implementation, NOT the official GitHub MCP server."
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.4.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
test = ["pytest==9.0.3", "respx==0.23.1"]

[tool.setuptools.packages.find]
include = ["github_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: real-network smoke test against api.github.com, requires GITHUB_MCP_LIVE=1",
]
